fixing findSubordinates function, responding with null pointer exception